# vectra

./: CLAUDE.md  Cargo.toml  LEARNING_PHASE.md
benches/: benchmarks.rs
src/: distance.rs  error.rs  lib.rs  store.rs
