[package]
name = "vectra"
version = "0.1.0"
edition = "2024"
description = "A vector search engine built from scratch for learning"

[dependencies]
thiserror = "2"
rand = "0.8"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "benchmarks"
harness = false
